# polito-aml

./: .gitignore  README.md
Lab_01/: MLDL_Lab01_Ex01.ipynb  MLDL_Lab01_Ex02.ipynb
Lab_02/: AML_Lab02.ipynb  pyproject.toml
Lab_03/: COLAB_QUICKSTART.md  COLAB_TRAINING.md  NOTEBOOK_TO_PROJECT.md  README.md  colab_training.ipynb  config.py  download_dataset.py  eval.py  examples.py  requirements.txt  train.py
Lab_03/dataset/: __init__.py  custom_dataset.py
Lab_03/models/: __init__.py  vgg_finetuning.py
Lab_03/utils/: __init__.py  metrics.py  transforms.py  visualization.py
Lab_04/: AML_lab04.ipynb  pyproject.toml
Lab_04/wandb/: latest-run
Lab_04/wandb/run-20251118_213155-w62uyfmf/: run-w62uyfmf.wandb
Lab_04/wandb/run-20251118_213155-w62uyfmf/files/: wandb-metadata.json
Lab_04/wandb/run-20251118_214752-sjnydhyu/: run-sjnydhyu.wandb
Lab_04/wandb/run-20251118_214752-sjnydhyu/files/: requirements.txt  wandb-metadata.json
