[project]
name = "lab-04"
version = "0.1.0"
description = ""
authors = [
    {name = "ghMellow",email = "nicotermins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "wandb (>=0.23.0,<0.24.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
